--- a/source/form.html
+++ b/source/form.html
@@ -7,9 +7,10 @@
   <title>Туристический город «Седона», штат Аризона</title>
   <link href="css/styles.min.css" rel="stylesheet">
   <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
 </head>
 
-<body class="page__body page-container">
+<body class="page-body page-container">
   <header class="page-header">
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button">
@@ -40,12 +41,12 @@
         </ul>
       </div>
     </nav>
-    <div class="logo__wrapper">
-      <a class="page-header__logo-link" href="index.html">
+    <div class="main-logo">
+      <a class="main-logo__link" href="index.html">
         <picture>
           <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-          <img class="page-header__logo" src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
+          <img class="main-logo__img" src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
         </picture>
       </a>
     </div>
@@ -75,18 +76,18 @@
           <div class="feedback-form__wrapper">
             <div class="presenting form__item">
               <p class="presenting__title">Представьтесь:</p>
-              <ul class="presenting-list">
-                <li class="presenting-list__item">
+              <ul class="presenting__list">
+                <li class="presenting__list-item">
                   <label class="presenting__label" for="presenting-name">Имя<sup>*</sup>:</label>
                   <input class="presenting__input name-input form-input" id="presenting-name" type="text" name="user"
                     data-rule="name" placeholder="Петр">
                 </li>
-                <li class="presenting-list__item">
+                <li class="presenting__list-item">
                   <label class="presenting__label" for="presenting-surname">Фамилия<sup>*</sup>:</label>
                   <input class="presenting__input surname-input form-input" id="presenting-surname" type="text"
                     name="surname" data-rule="surname" placeholder="Иванов">
                 </li>
-                <li class="presenting-list__item">
+                <li class="presenting__list-item">
                   <label class="presenting__label" for="presenting-patronymic">Отчество:</label>
                   <input class="presenting__input form-input" id="presenting-patronymic" type="text" name="patronymic"
                     placeholder="Александрович">
@@ -95,73 +96,71 @@
             </div>
             <div class="contacts form__item">
               <p class="contacts__title">Контактная информация:</p>
-              <ul class="contacts-list">
-                <li class="contacts-list__item contacts-item__tel">
-                  <label class="contact__label" for="contacts-tel"><span class="display-none">Контактный
+              <ul class="contacts__list">
+                <li class="contacts__list-item contacts__tel">
+                  <label class="contacts__label" for="contacts-tel"><span class="display-none">Контактный
                     </span>телефон<sup>*</sup>:</label>
                   <input class="form-input tel-input" id="contacts-tel" type="tel" pattern="^[ 0-9]+$" name="tel"
                     data-rule="tel" placeholder="Введите телефон">
                 </li>
-                <li class="contacts-list__item contacts-item__email">
-                  <label class="contact__label" for="contacts-email">Электронная почта<sup>*</sup>:</label>
+                <li class="contacts__list-item contacts__email">
+                  <label class="contacts__label" for="contacts-email">Электронная почта<sup>*</sup>:</label>
                   <input class="form-input email-input" id="contacts-email" type="email"
                     pattern="[a-zA-Z0-9]+@[a-zA-Z0-9]+\.[a-zA-Z0-9]+" name="email" data-rule="email"
                     placeholder="Введите e-mail">
                 </li>
               </ul>
             </div>
-            <div class="imprassion form__item">
-              <p class="imprassion__title">Ваше общее впечатление:</p>
-              <ul class="imprassion-list">
-                <li class="imprassion-list__item">
-                  <input class="visually-hidden impression-input--radio" type="radio" name="imprassion-group"
-                    value="positive" id="filter-positive" checked>
-                  <label class="imprassion__label" for="filter-positive">Скорее положительное</label>
+            <div class="impression form__item">
+              <p class="impression__title">Ваше общее впечатление:</p>
+              <ul class="impression__list">
+                <li class="impression__list-item">
+                  <input class="visually-hidden impression-input" type="radio" name="impression-group" value="positive"
+                    id="filter-positive" checked>
+                  <label class="impression__label" for="filter-positive">Скорее положительное</label>
                 </li>
-                <li class="imprassion-list__item">
-                  <input class="visually-hidden impression-input--radio" type="radio" name="imprassion-group"
-                    value="negative" id="filter-negative">
-                  <label class="imprassion__label" for="filter-negative">Скорее отрицательное</label>
+                <li class="impression__list-item">
+                  <input class="visually-hidden impression-input" type="radio" name="impression-group" value="negative"
+                    id="filter-negative">
+                  <label class="impression__label" for="filter-negative">Скорее отрицательное</label>
                 </li>
-                <li class="imprassion-list__item">
-                  <input class="visually-hidden impression-input--radio" type="radio" name="imprassion-group"
-                    value="negative" id="filter-difficult">
-                  <label class="imprassion__label" for="filter-difficult">Затрудняюсь ответить</label>
+                <li class="impression__list-item">
+                  <input class="visually-hidden impression-input" type="radio" name="impression-group" value="negative"
+                    id="filter-difficult">
+                  <label class="impression__label" for="filter-difficult">Затрудняюсь ответить</label>
                 </li>
               </ul>
             </div>
             <div class="visited form__item">
               <p class="visited__title">Посещенные<br>достопримечательности:</p>
-              <ul class="visited-list">
-                <li class="visited-list__item">
-                  <input class="visually-hidden visited-input__checkbox" type="checkbox" name="bridge"
-                    id="filter-bridge" checked>
+              <ul class="visited__list">
+                <li class="visited__list-item">
+                  <input class="visually-hidden visited-input" type="checkbox" name="bridge" id="filter-bridge" checked>
                   <label class="visited__label" for="filter-bridge">Мост Дьявола</label>
                 </li>
-                <li class="visited-list__item">
-                  <input class="visually-hidden visited-input__checkbox" type="checkbox" name="mountain"
-                    id="filter-mountain" checked>
+                <li class="visited__list-item">
+                  <input class="visually-hidden visited-input" type="checkbox" name="mountain" id="filter-mountain"
+                    checked>
                   <label class="visited__label" for="filter-mountain">Гора-Колокол</label>
                 </li>
-                <li class="visited-list__item">
-                  <input class="visually-hidden visited-input__checkbox" type="checkbox" name="park" id="filter-park"
-                    checked>
+                <li class="visited__list-item">
+                  <input class="visually-hidden visited-input" type="checkbox" name="park" id="filter-park" checked>
                   <label class="visited__label" for="filter-park">Слайд-парк</label>
                 </li>
-                <li class="visited-list__item">
-                  <input class="visually-hidden visited-input__checkbox" type="checkbox" name="rocks" id="filter-rocks">
+                <li class="visited__list-item">
+                  <input class="visually-hidden visited-input" type="checkbox" name="rocks" id="filter-rocks">
                   <label class="visited__label" for="filter-rocks">Красные скалы</label>
                 </li>
               </ul>
             </div>
             <div class="emotions form__item">
-              <p class="emotions_title">Опишите свои эмоции:</p>
+              <p class="emotions__title">Опишите свои эмоции:</p>
               <label class="visually-hidden" for="emotions-message"></label>
               <textarea class="emotions__message" id="emotions-message" name="message" rows="1" cols="1"
                 placeholder="Опишите подробно все свои восторги"></textarea>
             </div>
             <button class="button form-submit feedback-show" type="submit">Отправить отзыв</button>
-            <p class="form__footnote"><sup>*</sup> — обязательные поля</p>
+            <p class="form-footnote"><sup>*</sup> — обязательные поля</p>
           </div>
         </form>
       </section>
@@ -200,7 +199,7 @@
       </div>
       <div class="copyright page-footer__item">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано
-          <svg class="copyright__link--academy" width="27px" height="34px">
+          <svg class="icon-academy" width="27px" height="34px">
             <use xlink:href="img/sprite.svg#icon-academy"></use>
           </svg>
           <span class="visually-hidden">HTML Academy</span>
@@ -209,19 +208,19 @@
     </div>
   </footer>
 
-  <section class="modal modal__mistake">
+  <section class="modal modal-mistake">
     <h2 class="modal__title modal__title--mistake">Что-то пошло<br> не так!</h2>
     <p class="modal__text modal__text--mistake">Проверьте поля, выделенные<br> красным, скорее всего вы<br> забыли их
       заполнить</p>
-    <button class="button modal-close button__mistake"> ok</button>
+    <button class="button modal__close button-mistake"> ok</button>
   </section>
 
-  <section class="modal modal__success">
+  <section class="modal modal-success">
     <h2 class="modal__title modal__title--success">Ваш отзыв отправлен!</h2>
     <p class="modal__text  modal__text--success">Спасибо за ваше участие, ваш<br>отзыв уже поступил к нам.<br> В
       ближайшее время мы<br> опубликуем его на сайте.</p>
-    <div class="button-success__wrapper">
-      <button class="button modal-close button__success">Закрыть окно</button>
+    <div class="button-wrapper">
+      <button class="button modal__close button-success">Закрыть окно</button>
     </div>
   </section>
   <script src="js/scripts.js"></script>
