--- a/source/photo.html
+++ b/source/photo.html
@@ -9,7 +9,7 @@
   <link rel="preload" href="fonts/ptsans.woff2" as="font">
 </head>
 
-<body class="page__body page-container">
+<body class="page-body page-container">
   <header class="page-header">
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button">
@@ -40,12 +40,12 @@
         </ul>
       </div>
     </nav>
-    <div class="logo__wrapper">
-      <a class="page-header__logo-link" href="index.html">
+    <div class="main-logo">
+      <a class="main-logo__link" href="index.html">
         <picture>
           <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-          <img class="page-header__logo" src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
+          <img class="main-logo__img" src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
         </picture>
       </a>
     </div>
@@ -68,7 +68,7 @@
       </header>
       <div class="photo">
         <div class="photo__wrapper">
-          <div class="photo__item photo__first">
+          <div class="photo__item photo-first">
             <picture>
               <source type="image/webp" media="(min-width: 1200px)"
                 srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
@@ -79,19 +79,19 @@
                 srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
                 srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-              <img class="photo__first-img" src="img/photo-sunset-mobile@1x.jpg"
+              <img class="photo-first__img" src="img/photo-sunset-mobile@1x.jpg"
                 srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280"
                 alt="Вид на дорогу уходящую к горам во время захода солнца">
             </picture>
-            <div class="photo-text__wrapper ">
-              <div class="photo-text__wrapper--desktop">
+            <div class="photo-text">
+              <div class="photo-text__desktop">
                 <h3 class="photo__title">Неродные просторы</h3>
                 <p class="photo__description">Автор фото: Борис</p>
-                <button class="like first-photo__like" type="button">
+                <button class="like like__first-photo" type="button">
                   <svg width="22px" height="20px">
                     <use xlink:href="img/sprite.svg#icon-like"></use>
                   </svg>
-                  <span class="likes-number">1350</span></button>
+                  <span class="like__number">1350</span></button>
               </div>
             </div>
           </div>
@@ -111,15 +111,15 @@
                 <img class="photo__img" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x"
                   width="280" height="280" alt="Необычный местный какутус на фоне красных скал и зелени">
               </picture>
-              <div class="photo-text__wrapper">
-                <div class="photo-text__wrapper--desktop">
+              <div class="photo-text">
+                <div class="photo-text__desktop">
                   <h3 class="photo__title">Местная растительность</h3>
                   <p class="photo__description">Автор фото: Сергей</p>
-                  <button class="like others-photo__like" type="button">
+                  <button class="like like__others-photo" type="button">
                     <svg width="22px" height="20px">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
                     </svg>
-                    <span class="likes-number">143</span></button>
+                    <span class="like__number">143</span></button>
                 </div>
               </div>
             </li>
@@ -137,15 +137,15 @@
                 <img class="photo__img" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x"
                   width="280" height="280" alt="Вид на горную извилистую дорогу, утапающую в зелени">
               </picture>
-              <div class="photo-text__wrapper">
-                <div class="photo-text__wrapper--desktop">
+              <div class="photo-text">
+                <div class="photo-text__desktop">
                   <h3 class="photo__title">Дорога на север</h3>
                   <p class="photo__description">Автор фото: Петр</p>
-                  <button class="like others-photo__like" type="button">
+                  <button class="like like__others-photo" type="button">
                     <svg width="22px" height="20px">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
                     </svg>
-                    <span class="likes-number">96</span></button>
+                    <span class="like__number">96</span></button>
                 </div>
               </div>
             </li>
@@ -164,15 +164,15 @@
                 <img class="photo__img" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x"
                   width="280" height="280" alt="Вид на красные горы и зеленую долину между ними">
               </picture>
-              <div class="photo-text__wrapper">
-                <div class="photo-text__wrapper--desktop">
+              <div class="photo-text">
+                <div class="photo-text__desktop">
                   <h3 class="photo__title">Мост Дьявола</h3>
                   <p class="photo__description">Автор фото: Антон</p>
-                  <button class="like others-photo__like" type="button">
+                  <button class="like like__others-photo" type="button">
                     <svg width="22px" height="20px">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
                     </svg>
-                    <span class="likes-number">254</span></button>
+                    <span class="like__number">254</span></button>
                 </div>
               </div>
             </li>
@@ -183,7 +183,7 @@
     <section class="video">
       <h2 class="visually-hidden">Видеопрезентация Седоны</h2>
       <div class="video__wrapper">
-        <div class="video-text__wrapper">
+        <div class="video__text">
           <h3 class="video__title">Все еще сомневаетесь?</h3>
           <p class="video__description">Смотрите Видеопрезентацию и скорее за билетами, пока они не подорожали в
             очередной раз!</p>
@@ -193,9 +193,9 @@
         </div>
         <div class="video-tools">
           <div class="video-tools__wrapper">
-            <div class="video__time-controls">
-              <div class="video__scale"></div>
-              <div class="video__toggle"></div>
+            <div class="video-tools__time-controls">
+              <div class="video-tools__scale"></div>
+              <div class="video-tools__toggle"></div>
             </div>
           </div>
           <div class="video-controls">
@@ -255,7 +255,7 @@
       </div>
       <div class="copyright page-footer__item">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано
-          <svg class="copyright__link--academy" width="27px" height="34px">
+          <svg class="icon-academy" width="27px" height="34px">
             <use xlink:href="img/sprite.svg#icon-academy"></use>
           </svg>
           <span class="visually-hidden">HTML Academy</span>
