--- a/source/photo.html
+++ b/source/photo.html
@@ -11,7 +11,7 @@
 
 <body class="page-body page-container">
   <header class="page-header">
-    <nav class="main-nav main-nav--closed main-nav--nojs">
+    <nav class="main-nav main-nav--opened main-nav--nojs">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -69,110 +69,126 @@
       <div class="photo">
         <div class="photo__wrapper">
           <div class="photo__item photo-first">
-            <picture>
-              <source type="image/webp" media="(min-width: 1200px)"
-                srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)"
-                srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
-              <source media="(min-width: 1200px)"
-                srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)"
-                srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-              <img class="photo-first__img" src="img/photo-sunset-mobile@1x.jpg"
-                srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280"
-                alt="Вид на дорогу уходящую к горам во время захода солнца">
-            </picture>
-            <div class="photo-text">
+            <a href="">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
+                <source media="(min-width: 1200px)"
+                  srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)"
+                  srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                <img class="photo-first__img" src="img/photo-sunset-mobile@1x.jpg"
+                  srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" height="280"
+                  alt="Вид на дорогу уходящую к горам во время захода солнца">
+              </picture>
+            </a>
+            <div class="photo-text photo-first__text">
               <div class="photo-text__desktop">
                 <h3 class="photo__title">Неродные просторы</h3>
                 <p class="photo__description">Автор фото: Борис</p>
-                <button class="like like__first-photo" type="button">
-                  <svg width="22px" height="20px">
+                <a href="" aria-label="Поставить отметку нравится" class="like like__first-photo">
+                  <svg width="22" height="20">
                     <use xlink:href="img/sprite.svg#icon-like"></use>
                   </svg>
-                  <span class="like__number">1350</span></button>
+                  <span class="like__number">1350</span>
+                </a>
               </div>
             </div>
           </div>
           <ul class="photo__list">
             <li class="photo__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)"
-                  srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
-                <source type="image/webp"
-                  srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
-                <source media="(min-width: 1200px)"
-                  srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)"
-                  srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
-                <img class="photo__img" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x"
-                  width="280" height="280" alt="Необычный местный какутус на фоне красных скал и зелени">
-              </picture>
+              <a href="">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)"
+                    srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
+                  <source media="(min-width: 1200px)"
+                    srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                  <img class="photo__img" src="img/photo-cactus-mobile@1x.jpg"
+                    srcset="img/photo-cactus-mobile@2x.jpg 2x" width="280" height="280"
+                    alt="Необычный местный какутус на фоне красных скал и зелени">
+                </picture>
+              </a>
               <div class="photo-text">
                 <div class="photo-text__desktop">
                   <h3 class="photo__title">Местная растительность</h3>
                   <p class="photo__description">Автор фото: Сергей</p>
-                  <button class="like like__others-photo" type="button">
-                    <svg width="22px" height="20px">
+                  <a href="" aria-label="Поставить отметку нравится" class="like like__others-photo">
+                    <svg width="22" height="20">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
                     </svg>
-                    <span class="like__number">143</span></button>
+                    <span class="like__number">143</span>
+                  </a>
                 </div>
               </div>
             </li>
             <li class="photo__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)"
-                  srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
-                <source media="(min-width: 1200px)"
-                  srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)"
-                  srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                <img class="photo__img" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x"
-                  width="280" height="280" alt="Вид на горную извилистую дорогу, утапающую в зелени">
-              </picture>
+              <a href="">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)"
+                    srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
+                  <source media="(min-width: 1200px)"
+                    srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+                  <img class="photo__img" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x"
+                    width="280" height="280" alt="Вид на горную извилистую дорогу, утапающую в зелени">
+                </picture>
+              </a>
               <div class="photo-text">
                 <div class="photo-text__desktop">
                   <h3 class="photo__title">Дорога на север</h3>
                   <p class="photo__description">Автор фото: Петр</p>
-                  <button class="like like__others-photo" type="button">
-                    <svg width="22px" height="20px">
+                  <a href="" aria-label="Поставить отметку нравится" class="like like__others-photo">
+                    <svg width="22" height="20">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
                     </svg>
-                    <span class="like__number">96</span></button>
+                    <span class="like__number">96</span>
+                  </a>
                 </div>
               </div>
             </li>
             <li class="photo__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)"
-                  srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
-                <source type="image/webp"
-                  srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
-                <source media="(min-width: 1200px)"
-                  srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)"
-                  srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
-                <img class="photo__img" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x"
-                  width="280" height="280" alt="Вид на красные горы и зеленую долину между ними">
-              </picture>
+              <a href="">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)"
+                    srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
+                  <source media="(min-width: 1200px)"
+                    srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+                  <img class="photo__img" src="img/photo-bridge-mobile@1x.jpg"
+                    srcset="img/photo-bridge-mobile@2x.jpg 2x" width="280" height="280"
+                    alt="Вид на красные горы и зеленую долину между ними">
+                </picture>
+              </a>
               <div class="photo-text">
                 <div class="photo-text__desktop">
                   <h3 class="photo__title">Мост Дьявола</h3>
                   <p class="photo__description">Автор фото: Антон</p>
-                  <button class="like like__others-photo" type="button">
-                    <svg width="22px" height="20px">
+                  <a href="" aria-label="Поставить отметку нравится" class="like like__others-photo">
+                    <svg width="22" height="20">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
                     </svg>
-                    <span class="like__number">254</span></button>
+                    <span class="like__number">254</span>
+                  </a>
                 </div>
               </div>
             </li>
@@ -201,19 +217,19 @@
           <div class="video-controls">
             <button class="video-controls__item video-repeat" type="button"><span class="visually-hidden">Повторить
                 воспроизведение видео</span>
-              <svg width="16px" height="20px">
+              <svg width="16" height="20">
                 <use xlink:href="img/sprite.svg#icon-video-replay"></use>
               </svg>
             </button>
             <button class="video-controls__item video-subtitle" type="button"><span class="visually-hidden">Включить
                 субтитры</span>
-              <svg width="32px" height="20px">
+              <svg width="32" height="20">
                 <use xlink:href="img/sprite.svg#icon-video-subtitles"></use>
               </svg>
             </button>
             <button class="video-controls__item video-full" type="button"><span class="visually-hidden">Развернуть видео
                 на весь экран</span>
-              <svg width="20px" height="20px">
+              <svg width="20" height="20">
                 <use xlink:href="img/sprite.svg#icon-video-fullscreen"></use>
               </svg>
             </button>
@@ -230,7 +246,7 @@
           <li class="social__item">
             <a class="social__link social__link--twitter" href="">
               <span class="visually-hidden">Твитер</span>
-              <svg width="17.5px" height="14.663px">
+              <svg width="17" height="14">
                 <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
@@ -238,7 +254,7 @@
           <li class="social__item">
             <a class="social__link social__link--facebook" href="">
               <span class="visually-hidden">Фэйсбук</span>
-              <svg width="8.672px" height="18.944px">
+              <svg width="8" height="18">
                 <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
@@ -246,7 +262,7 @@
           <li class="social__item">
             <a class="social__link social__link--youtube" href="">
               <span class="visually-hidden">Ютюб</span>
-              <svg width="19.979px" height="14.015px">
+              <svg width="19" height="14">
                 <use xlink:href="img/sprite.svg#icon-youtube"></use>
               </svg>
             </a>
@@ -255,7 +271,7 @@
       </div>
       <div class="copyright page-footer__item">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано
-          <svg class="icon-academy" width="27px" height="34px">
+          <svg class="icon-academy" width="27" height="34">
             <use xlink:href="img/sprite.svg#icon-academy"></use>
           </svg>
           <span class="visually-hidden">HTML Academy</span>
@@ -263,7 +279,6 @@
       </div>
     </div>
   </footer>
-  <script src="js/scripts.js"></script>
 </body>
 
 </html>
